# scrapy-python-example

./: .prospector.yaml  README.md  books.json  pyproject.toml
crawler/: settings.py
crawler/spiders/books/: items.py  loaders.py  spiders.py
