[tool.poetry]
name = "books-project"
version = "0.1.0"
description = ""
authors = ["Nikolay Galkin <mr.galkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^1.7"
prospector = "^1.1"
yapf = "^0.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
